--- a/index.html
+++ b/index.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .paraborder {
-        border: double;
-        border-left-style: ridge;
-        border-left-color: aqua;
-        border-top-width: 10px;
-        border-right: dotted;
-        border-block-end-width: 5px;
-        border-block-end-style: solid;
-        border-block-end-color: blue;
-        writing-mode: vertical-rl;
-      }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Student Portfolio</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <h1>Mahesh Yadav</h1>
+            <p>Student | Developer | Designer</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-      .p1 {
-        border: ridge;
-        border-width: 2px;
-        border-radius: 5px 5px;
-        position: absolute;
-        background-color: rgb(225, 255, 255);
-        border-color: rgb(14, 100, 53);
-      }
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Mahesh Yadav, a student passionate about web
+                development
+                and design. I enjoy creating innovative solutions and learning
+                new technologies.</p>
+        </section>
 
-      .p2 {
-        border: ridge;
-        border-width: 20px 20px 20px 20px;
-        border-image: url("download.jfif");
-      }
-    </style>
-  </head>
-  <body>
-    <div class="paraborder">
-      <p>test</p>
-    </div>
-    <p class="p1">text text text</p>
-    <br /><br />
-    <p class="p2">ok</p>
-  </body>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Description of project 1.</p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Description of project 2.</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Send</button>
+            </form>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 Mahesh Yadav</p>
+        </footer>
+    </body>
 </html>
