--- a/skills.html
+++ b/skills.html
@@ -6,14 +6,14 @@
         <title>Student Portfolio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body class="aurora">
+    <body>
         <header>
             <div class="nameBar">
                 <a href="index.html"><h1>Mahesh Kumar Yadav</h1></a>
             </div>
             <p>Student | Developer | Designer</p>
-            <nav class="navigationBar">
-                <ul>
+            <nav>
+                <ul class="navigationBar">
                     <li><a href="aboutme.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -21,17 +21,18 @@
                 </ul>
             </nav>
         </header>
-        <section id="about">
-            <div class="container">
-                <div class="div-left">
-                    <h1>Hi I am Mahesh Yadav, Welcome To My Website. </h1>
-                    <p>Here is some information about me. Feel free to explore
-                        more about my background, interests, and projects.</p>
-                </div>
-                <div class="div-right">
-                    <img src="photo.jpg" alt="Twitter" width="200px">
-                </div>
-            </div>
+
+        <section id="skills">
+            <h2>Here are some of the skills I've acquired: </h2>
+            <p>
+                <li><img src="icons8-c-26.png" width="40px"></li>
+                <li><img src="bxl-c-plus-plus.svg" width="48px"></li>
+                <li><img src="bxl-java.svg" width="48px"></li>
+                <li><img src="bxl-html5.svg" width="48px"></li>
+                <li><img src="bxs-file-css.svg" width="48px"></li>
+                <li><img src="bxl-javascript.svg" width="48px"></li>
+                <li><img src="bxl-php.svg" width="48px"></li>
+            </p>
         </section>
 
         <footer>
