--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <title>Student Portfolio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body class="aurora">
+    <body>
         <header>
             <div class="nameBar">
                 <a href="index.html"><h1>Mahesh Kumar Yadav</h1></a>
@@ -21,17 +21,26 @@
                 </ul>
             </nav>
         </header>
-        <section id="about">
-            <div class="container">
-                <div class="div-left">
-                    <h1>Hi I am Mahesh Yadav, Welcome To My Website. </h1>
-                    <p>Here is some information about me. Feel free to explore
-                        more about my background, interests, and projects.</p>
-                </div>
-                <div class="div-right">
-                    <img src="photo.jpg" alt="Twitter" width="200px">
-                </div>
-            </div>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Feel free to send a message about any query,remarks or
+                questions.</p>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="contact">contact no:</label>
+                <input type="contact" id="contact no" name="contact no:" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Send</button>
+            </form>
         </section>
 
         <footer>
