--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
         <section class="about">
             <h2 align="center">About Me</h2>
             <p>Hello! I'm Mahesh Yadav, currently studying Bachelor of
-                Information Technology (BIT).
+                Information Technology (BIT, V semester). In Kantipur City College(Kathmandu), Affiliated to Purbanchal University.
             </p>
             <p> I am passionate about web
                 development and design.
