--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         more about my background, interests, and projects.</p>
                 </div>
                 <div class="div-right">
-                    <img src="photo.jpg" alt="Twitter" width="200px">
+                    <img src="1722532742592.jpg" alt="Twitter" width="200px">
                 </div>
             </div>
         </section>
