--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Mahesh Yadav</p>
+            <p> 2024 Mahesh Yadav</p>
         </footer>
     </body>
 </html>
