--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
             </section>
         </div>
         <footer>
-            <p>&copy; 2024 Mahesh Yadav</p>
+            <p> 2024 Mahesh Yadav</p>
         </footer>
     </body>
 </html>
