--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Mahesh Yadav</p>
+            <p> 2024 Mahesh Yadav</p>
         </footer>
     </body>
 </html>
