--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Mahesh Yadav</p>
+            <p> 2024 Mahesh Yadav</p>
         </footer>
     </body>
 </html>
