--- a/aboutme.html
+++ b/aboutme.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Student Portfolio</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="aboutstyle.css">
     </head>
     <body>
         <header>
             <div class="nameBar">
                 <a href="index.html"><h1>Mahesh Kumar Yadav</h1></a>
             </div>
-            <p>Student | Developer | Designer</p>
+            <p> Developer | Designer | Digital Marketing</p>
             <nav class="navigationBar">
                 <ul>
                     <li><a href="aboutme.html">About</a></li>
@@ -46,7 +46,7 @@
             </section>
         </div>
         <footer>
-            <p> 2024 Mahesh Yadav</p>
+            <p>&copy; <span id="currentYear"></span> Mahesh Kumar Yadav. All rights reserved.</p>
         </footer>
     </body>
 </html>
