--- a/skills.html
+++ b/skills.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Student Portfolio</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="skillstyle.css">
     </head>
     <body>
         <header>
             <div class="nameBar">
                 <a href="index.html"><h1>Mahesh Kumar Yadav</h1></a>
             </div>
-            <p>Student | Developer | Designer</p>
+            <p> Developer | Designer | Digital Marketing</p>
             <nav>
                 <ul class="navigationBar">
                     <li><a href="aboutme.html">About</a></li>
@@ -36,7 +36,7 @@
         </section>
 
         <footer>
-            <p> 2024 Mahesh Yadav</p>
+            <p>&copy; <span id="currentYear"></span> Mahesh Kumar Yadav. All rights reserved.</p>
         </footer>
     </body>
 </html>
